Standardized modal components

--- a/views/files.tt
+++ b/views/files.tt
@@ -6,7 +6,7 @@
   table_buttons = [{
     label     = "Delete"
     type      = "modal_button"
-    modalID   = "#deleteFile"
+    modalId   = "deleteFile"
   }];
 
   table_columns = [{
