--- a/views/tables/basic_cell_modal_button.tt
+++ b/views/tables/basic_cell_modal_button.tt
@@ -1,6 +1,5 @@
 [%
   cell_class  = class ? ' class="' _ class _ '"' : '';
-  # <<< continue here, this should be applied to all fields, then added to account request field config
   field_value = field_name AND field_value ? field_value : label;
   data_attr   = field_name ? ' data-' _ field_name _ '="' _ field_value _ '"' : '';
 %]
@@ -9,7 +8,7 @@
     type="button"
     class="btn btn-delete btn-small btn-js-delete"
     data-toggle="modal"
-    data-target=[% modalID %]
+    data-target=#[% modalId %]
     data-title=[% dataTitle %]
     data-id=[% dataID %]
   >
