--- a/views/wizard/upload_file.tt
+++ b/views/wizard/upload_file.tt
@@ -1,73 +1,38 @@
 <div class="modal"  id="[% modalId %]" tabindex="-1" role="dialog" aria-labelledby="[% modalId %]Label" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
-      <div class="modal-header">
-        <div class="modal-header__content">
-          <h3 class="modal-title" id="[% modalId %]Label">
-            Upload a file
-          </h3>
-        
-        </div>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true" class="hidden">Close</span>
-        </button>
-      </div>
+      [% INCLUDE wizard/sub/modal_header.tt label="Upload a file"; %]
       
       <form role="form" method="post" enctype="multipart/form-data" action="?is_independent">
         [% INCLUDE fields/hidden.tt name="csrf_token" value=csrf_token; %]
         <div class="modal-frame">
           <div class="modal-body">
             <p class="mt-3">File to upload:</p>
-            <div class="input input--file">
-              <div class="input__label">
-                <label for="filename">
-                  <span class="input__file-label" role="button" aria-controls="filename" tabindex="0">
-                    Choose file
-                  </span>
-                </label>
-                
-                <div class="file">
-                  <label class="file__name" for="filename"> No file chosen </label>
-                  <button type="button" class="file__delete close" aria-label="Delete">
-                    <span aria-hidden="true" class="hidden">Delete file</span>
-                  </button>
-                </div>
-              </div>
-              
-              <div class="input__field">
-                <input
-                  type="file"
-                  class="form-control-file" tabindex="-1"
-                  id="filename"
-                  name="file"
-                  placeholder="name"
-                >
-              </div>
-            </div>
+            [%-
+              INCLUDE fields/file.tt
+                id = "filename"
+                name = "file"
+                label = "Choose file"
+                placeholder = "No file chosen"
+                tabindex = 1;
+            -%]
           </div>
           
-          <div class="modal-footer">
-            <div class="modal-footer__left">
-              <button
-                type="button"
-                class="btn btn-cancel"
-                data-dismiss="modal"
-              >
-                <span class="btn__title">Cancel</span>
-              </button>
-            </div>
-            
-            <div class="modal-footer__right">
-              <button
-                type="submit"
-                class="btn btn-default"
-                name="submit"
-                value="submit"
-              >
-                <span class="btn__title">Submit</span>
-              </button>
-            </div>
-          </div>
+          [%-
+            INCLUDE wizard/sub/modal_footer.tt
+              left_buttons = [{
+                class   = "btn-cancel"
+                dismiss = "modal"
+                label   = "Cancel"
+              }]
+              right_buttons = [{
+                type  = "submit"
+                class = "btn-default"
+                name  = "submit"
+                value = "submit"
+                label = "Submit"
+              }];
+          -%]
         </div>
       </form>
     </div>
