--- a/views/fields/sub/modal_link.tt
+++ b/views/fields/sub/modal_link.tt
@@ -1,1 +1,5 @@
-<a href="#" class="link">[% label %]</a>
+<button type="button" class="btn btn-link" data-toggle="modal" data-target="#[% modalId %]">
+  <span class="btn__title">
+    [% INCLUDE fields/sub/filter.tt value=label; %]
+  </span>
+</button>
