--- a/views/files.tt
+++ b/views/files.tt
@@ -4,9 +4,9 @@
   table_order = '[0,"asc"]';
 
   table_buttons = [{
-    label     = "Delete"
-    type      = "modal_button"
-    modalId   = "deleteFile"
+    type    = "modal_button"
+    modalId = "deleteFile"
+    label   = "Delete"
   }];
 
   table_columns = [{
@@ -47,10 +47,10 @@
     title         = "Files"
     description   = "Below are all the files that have been uploaded for use on the dashboard or to share data with Ctrl O for support purposes, such as data imports or screen shots."
     aside_buttons = [{
-      type   = "modal_button"
-      target = "#uploadFile"
-      class  = "btn-default"
-      label  = "Upload a file"
+      type    = "modal_button"
+      modalId = "uploadFile"
+      class   = "btn-default"
+      label   = "Upload a file"
     }];
 %]
 
@@ -58,6 +58,6 @@
   [% INCLUDE tables/basic_table.tt; %]
 </div>
 [%-
-  INCLUDE wizard/upload_file.tt modalId="uploadFile";
-  INCLUDE wizard/delete_file.tt modalId="deleteFile";
+  INCLUDE wizard/file_upload.tt modalId="uploadFile";
+  INCLUDE wizard/file_delete.tt modalId="deleteFile";
 -%]
