--- a/views/layouts/page_header.tt
+++ b/views/layouts/page_header.tt
@@ -20,10 +20,10 @@
   #     class  = "btn-export"
   #     label  = "Export"
   #   }, {
-  #     type   = "modal_button"
-  #     target = "#userAddModal"
-  #     class  = "btn-default"
-  #     label  = "Add user"
+  #     type    = "modal_button"
+  #     modalId = "userAddModal"
+  #     class   = "btn-default"
+  #     label   = "Add user"
   #   }];
 -%]
 <div class="content-block__head row">
@@ -72,7 +72,7 @@
             type="button"
             class="btn [% button.class %]"
             data-toggle="modal"
-            data-target="[% button.target %]"
+            data-target="#[% button.modalId %]"
           >
             <span class="btn__title">[%- button.label || button.name -%]</span>
           </button>
