--- a/views/tables.tt
+++ b/views/tables.tt
@@ -55,10 +55,10 @@
     title         = "Tables"
     description   = "A table in LinkSpace is comparable to a worksheet in a spreadsheet. Here you can enter, create, edit, and delete your tables."
     aside_buttons = ! user.permission.superadmin ? [] : [{
-      type   = "modal_button"
-      target = "#tableModal"
-      class  = "btn-add"
-      label  = "New table"
+      type    = "modal_button"
+      modalId = "tableModal"
+      class   = "btn-add"
+      label   = "New table"
     }];
 -%]
 
