--- a/views/user/user_request.tt
+++ b/views/user/user_request.tt
@@ -183,25 +183,10 @@
     title         = "Users"
     description   = "This is an overview of all the users within your Linkspace system."
     aside_buttons = ! user.permission.useradmin ? [] : [{
-      type   = "modal_button"
-      target = "#emailUser"
-      class  = "btn-email"
-      label  = "Email users"
-    }, {
-      type   = "link"
-      target = url.page _ "/user_upload/"
-      class  = "btn-import"
-      label  = "Import users"
-    }, {
-      type   = "link"
-      target = url.page _ "/user_export/"
-      class  = "btn-export"
-      label  = "Export users"
-    }, {
-      type   = "modal_button"
-      target = "#userModal"
-      class  = "btn-add"
-      label  = "Add a user"
+      type    = "modal_button"
+      modalId = "userModal"
+      class   = "btn-add"
+      label   = "Add a user"
     }];
 %]
 
@@ -224,4 +209,4 @@
   
   [% INCLUDE tables/basic_table.tt; %]
 </div>
-[%- PROCESS wizard/user.tt endpoint="/api/user_account" -%]
+[%- PROCESS wizard/user_add.tt endpoint="/api/user_account" -%]
