--- a/views/user/user_request.tt
+++ b/views/user/user_request.tt
@@ -209,4 +209,4 @@
   
   [% INCLUDE tables/basic_table.tt; %]
 </div>
-[%- PROCESS wizard/user_add.tt endpoint="/api/user_account" -%]
+[%- INCLUDE wizard/user_add.tt endpoint="/api/user_account" -%]
