--- a/views/files.tt
+++ b/views/files.tt
@@ -59,5 +59,8 @@
 </div>
 [%-
   INCLUDE wizard/file_upload.tt modalId="uploadFile";
-  INCLUDE wizard/file_delete.tt modalId="deleteFile";
+  INCLUDE wizard/delete.tt
+    modalId     = "deleteFile"
+    label       = "Delete file"
+    description = "Are you sure you want to delete this file? You cannot undo this step.";
 -%]
