--- a/views/wizard/delete.tt
+++ b/views/wizard/delete.tt
@@ -1,12 +1,12 @@
 <div class="modal modal--delete"  id="[% modalId %]" tabindex="-1" role="dialog" aria-labelledby="[% modalId %]]Label" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered " role="document">
     <div class="modal-content">
-      [% INCLUDE wizard/sub/modal_header.tt label="Delete file"; %]
+      [% INCLUDE wizard/sub/modal_header.tt; %]
       <form method="post">
         [% INCLUDE fields/hidden.tt name="csrf_token" value=csrf_token; %]
         <div class="modal-frame" >
           <div class="modal-body">
-            <p>Are you sure you want to delete this file? You cannot undo this step.</p>
+            <p>[% description %]</p>
           </div>
           
           [%-
@@ -20,7 +20,7 @@
                 type  = "submit"
                 class = "btn-danger"
                 name  = "delete"
-                value = "delete"
+                value = value || "delete"
                 label = "Delete"
               }];
           -%]
