--- a/views/navigation/button_bar.tt
+++ b/views/navigation/button_bar.tt
@@ -18,7 +18,7 @@
       value="[% submit_value || 'submit' %]"
       class="btn btn-default"
     >
-      <span class="btn__title">Save changes</span>
+      <span class="btn__title">[% submit_label || "Save" %]</span>
     </button>
   </div>
   [% END %]
