--- a/views/user/user_upload.tt
+++ b/views/user/user_upload.tt
@@ -45,7 +45,7 @@
     
     [%-
       back_url = url.page _ "/user_overview/";
-      INCLUDE navigation/button_bar.tt back_url=back_url submit_name="submit";
+      INCLUDE navigation/button_bar.tt back_url=back_url submit_name="submit" submit_label="Save changes";
     -%]
     
   </form>
