--- a/views/snippets/header.tt
+++ b/views/snippets/header.tt
@@ -1,16 +1,23 @@
   <header class="page-header row no-gutters">
-    <nav class="page-header_container">
+    <nav class="page-header_container" aria-label="Top">
       <div class="col-lg-2 offset-lg-10 p-0">
         <div class="user dropdown">
-          <button class="user__toggle btn btn-default dropdown-toggle" type="button" id="usermenu"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <button
+            class="user__toggle btn btn-default dropdown-toggle"
+            type="button"
+            id="usermenu"
+            data-toggle="dropdown"
+            aria-haspopup="listbox"
+            aria-expanded="false"
+            aria-labelledby="usermenu"
+          >
             <span>User menu</span>
           </button>
-          <ul class="user__menu dropdown-menu dropdown-menu-right" aria-labelledby="usermenu">
-            <li class="user__menu-item">
+          <ul class="user__menu dropdown-menu dropdown-menu-right" aria-labelledby="usermenu" role="listbox">
+            <li class="user__menu-item" role="option">
               <a class="user__link" href="[% url.page %]/myaccount">My details</a>
             </li>
-            <li class="user__menu-item">
+            <li class="user__menu-item" role="option">
               <a class="user__link user__link--logout" href="[% url.page %]/logout">Logout</a>
             </li>
           </ul>
