--- a/views/admin_settings.tt
+++ b/views/admin_settings.tt
@@ -28,7 +28,7 @@
   
     [% IF site.register_show_organisation %]
     <div class="col-md-4 col-sm-6 mb-3">
-      <a href="[% url.page %]/organisation/" class="card card--settings">
+      <a href="[% url.page %]/settings/organisation_overview/" class="card card--settings">
         <h4 class="card__title">
           <div class="card__title-icon card__title-icon--organisation"></div>
           <span> Manage [% site.organisation_name | html %]s </span>
