Add autofocus to top field of standardized add pages

--- a/views/layouts/page_save_name_only.tt
+++ b/views/layouts/page_save_name_only.tt
@@ -27,6 +27,7 @@
               value       = item.id ? item.name : ''
               type        = "text"
               filter      = "html_entity"
+              autofocus   = ! item.id
               hide_group  = 1;
           -%]
         </div>
