--- a/views/fields/input.tt
+++ b/views/fields/input.tt
@@ -50,7 +50,8 @@
         placeholder="[% INCLUDE fields/sub/filter.tt value=placeholder; %]"
         value="[% INCLUDE fields/sub/filter.tt; %]"[% IF tabindex %]
         tabindex="[% tabindex %]"[% END %][% IF help_text %]
-        aria-describedby="[% id %]-help"[% END %][% IF is_disabled %]
+        aria-describedby="[% id %]-help"[% END %][% IF autofocus %]
+        autofocus[% END %][% IF is_disabled %]
         disabled[% END %][% IF is_required %]
         required
         aria-required="true"[% END %]
