--- a/views/admin_settings.tt
+++ b/views/admin_settings.tt
@@ -12,7 +12,7 @@
   <div class="row mb-5">
     
     <div class="col-md-4 col-sm-6 mb-3">
-      <a href="[% url.page %]/title/" class="card card--settings">
+      <a href="[% url.page %]/settings/title_overview/" class="card card--settings">
         <h4 class="card__title">
           <div class="card__title-icon card__title-icon--user"></div>
           <span> Manage titles </span>
