--- a/views/admin_settings.tt
+++ b/views/admin_settings.tt
@@ -62,7 +62,7 @@
   
     [% IF site.register_show_team %]
     <div class="col-md-4 col-sm-6 mb-3">
-      <a href="[% url.page %]/team/" class="card card--settings">
+      <a href="[% url.page %]/settings/team_overview/" class="card card--settings">
         <h4 class="card__title">
           <div class="card__title-icon card__title-icon--groups"></div>
           <span> Manage [% site.team_name | html %]s </span>
