--- a/views/layouts/content_with_menu.tt
+++ b/views/layouts/content_with_menu.tt
@@ -1,6 +1,6 @@
 <div class="row flex-nowrap">
   [% PROCESS navigation/main_menu.tt %]
-  <main class="[% main_class %]">
+  <main class="[% main_class || 'main col-lg-10' %]">
     <div class="main__container">
       [%
       IF detail_header;
