Fix a bug where title/organisation/team/department values where not passed to dropdowns correctly

--- a/views/user/my_account.tt
+++ b/views/user/my_account.tt
@@ -58,7 +58,7 @@
               INCLUDE fields/select.tt
                 id = field.name
                 name = field.name
-                value = user.${field.name}
+                value = user.get_column(field.name)
                 label = field.description
                 placeholder = field.placeholder
                 items = values.${field.name}
