Add missing data-layout-identifier property to body

--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="[% url.css %]/external.css">
   </head>
 
-  <body class="[% body_class || 'page' %]" data-csrf="[%- csrf_token -%]">
+  <body class="[% body_class || 'page' %]" data-csrf="[%- csrf_token -%]" data-layout-identifier="[% layout.identifier %]">
     <div class="[% container_class || 'container-fluid' %]">
       [%
         IF page == "login" OR page == "register" OR page == "reset" OR page == "invalidsite" OR page_as_mech;
