--- a/views/files.tt
+++ b/views/files.tt
@@ -2,6 +2,7 @@
   # prepare files table config
   table_dom = "t";
   table_order = '[0,"asc"]';
+  table_show_all_records = 1;
 
   table_buttons = [{
     type    = "modal_button"
