--- a/views/layouts/page_overview_name_only.tt
+++ b/views/layouts/page_overview_name_only.tt
@@ -3,6 +3,7 @@
   table_dom = "t";
   table_order = '[0,"asc"]';
   table_language = '{"emptyTable": "No ' _ item_type _ 's available"}';
+  table_show_all_records = 1;
 
   table_buttons = [{
     type    = "modal_button"
