--- a/views/tables.tt
+++ b/views/tables.tt
@@ -3,6 +3,7 @@
   table_dom = "t";
   table_order = '[0,"asc"]';
   table_width = 85;
+  table_show_all_records = 1;
 
   table_buttons = [{
     label = "View records"
